# ospos-client-4-rpi

./: CMakeLists.txt  CMakeLists.txt.user.2aec4a1  main.qml  posapp.pro  qml.qrc
Headers/Services/: osservice.h  restrequest.h  updateservice.h
Resources/: main.qml  qml.qrc
Resources/fonts/: Fonts.qml
Resources/view/controls/: Button.qml  ComboBox.qml  ComboBoxEditable.qml  ListViewColumnLabel.qml  TextField.qml  Toast.qml  ToastManager.qml  qmldir
Resources/view/helpers/: helper.js
Resources/view/page/: Account.qml  Accounts.qml  Home.qml  Item.qml  Items.qml  Payment.qml  ReceiptPopup.qml  Receive.qml  Sale.qml  SupplierAccount.qml
Resources/view/popups/: DialogPopup.qml  FavoriteItemsPopup.qml  ReceiptPopup.qml  SelectCustomerPopup.qml  SelectSupplierPopup.qml  SuspendedPopup.qml
Sources/: main.cpp
Sources/Services/: osservice.cpp  restrequest.cpp  updateservice.cpp
view/page/: Accounts.qml  Items.qml  Sale.qml
